# fab-agon-emulator

./: .gitmodules  CLAUDE.md  Cargo.toml  Makefile  README.md  launch-agon.sh
agon-cli-emulator/src/: main.rs
agon-dzrp-debugger/: Cargo.toml
agon-dzrp-debugger/src/: lib.rs  protocol.rs  server.rs  translator.rs
agon-ez80/: Cargo.toml
agon-ez80-emulator/: Cargo.toml
agon-ez80-emulator/src/: agon_machine.rs  debugger.rs  mos.rs
agon-ez80/src/: logger.rs  main.rs  parse_args.rs  socket_link.rs
agon-protocol/: Cargo.toml
agon-protocol/src/: lib.rs  messages.rs  socket.rs  websocket.rs
agon-vdp-cli/: Cargo.toml
agon-vdp-cli/src/: main.rs  parse_args.rs  text_vdp.rs
agon-vdp-sdl/: Cargo.toml
agon-vdp-sdl/src/: main.rs  parse_args.rs  sdl2ps2.rs  vdp_interface.rs
agon-wasm/: .gitignore  Cargo.toml
agon-wasm/src/: lib.rs
docs/: TODO.md
reports/: 2026-02-03-001-split-vdp-architecture.md  2026-02-03-002-websocket-vdp-support.md  2026-02-03-003-wasm-emulator.md  2026-02-07-001-frame-dump-feature.md  2026-02-12-001-ios-tvos-feasibility.md  2026-02-12-002-swift-go-port-assessment.md
src/: main.rs  parse_args.rs
web-emu/: .gitignore  index.html
web-vdp/: agon-vdp.js  index.html  serve.py
